# aviz

./: .gitignore  .gitmodules  CMakeLists.txt  aviz.pro  main.cpp  main_menue.ui  menue.cpp  menue.h  test.cpp  test.h  test.ui  test_logic.cpp  test_logic.h  theory.cpp  theory.h  theory.ui  vis.ui  xor.py
inc/: graph.h  menue.h  test.h  test_logic.h  theory.h  visualization.h
sections/: index.html
src/: graph.cpp  menue.cpp  test.cpp  test_logic.cpp  theory.cpp  visualization.cpp
test/: main.e
ui/: test.ui  theory.ui  vis.ui
